examples/Passing/Functions/simple_func.c
int foo (int a, int b) {
    return a + 100 + b;
}

int main() {
    int a = 5;
    return (foo(a, 10));
}
