examples/Failing/Variables/fail_increment10.c
int main() {
    int a = 5;
    int b = 10;
    (a + b)++;
    return a;
}
